--- a/templates/index.twig
+++ b/templates/index.twig
@@ -1,11 +1,15 @@
 {% extends "base.twig" %}
 
 {% block content %}
-	<h2>{{ foo }}</h2>
-	<p>{{ qux }}</p>
-	{% for post in posts %}
-		{% include ['tease-'~post.post_type~'.twig', 'tease.twig'] %}
-	{% endfor %}
-	
-	{% include 'partial/pagination.twig' with { pagination: posts.pagination({show_all: false, mid_size: 3, end_size: 2}) } %}
+
+<div class="container">
+	<div class="row">
+		<div class="col-md-7">
+			<div class="module">
+			Posts
+			</div>
+		</div>
+	</div>
+</div>
+
 {% endblock %}
