--- a/templates/page.twig
+++ b/templates/page.twig
@@ -1,14 +1,11 @@
 {% extends "base.twig" %}
 
 {% block content %}
-	<div class="content-wrapper">
-		<article class="post-type-{{post.post_type}}" id="post-{{post.ID}}">
-			<section class="article-content">
-				<h1 class="article-h1">{{post.title}}</h1>
-				<div class="article-body">
-					{{post.content}}
-				</div>
-			</section>
-		</article>
-	</div><!-- /content-wrapper -->
+
+	{% for module in post.get_field('modules') %}
+	
+		{% include 'partial/module.twig' ignore missing %}
+
+	{% endfor %}
+
 {% endblock %}
