--- a/templates/single.twig
+++ b/templates/single.twig
@@ -5,19 +5,17 @@
 <div class="container">
 	<div class="row">
 		<div class="col-md-7">
-		
 			<article class="module">
-				
 				<section class="article-content">
-					<h1 class="article-h1">{{post.title}}</h1>
-					
 					<div class="article-body">
 						{{post.content}}
+						<small class="text-muted">{{post.date}}</small>
 					</div>
 				</section>
-
 			</article>
-		
+		</div>
+		<div class="col-md-4 offset-md-1">
+			{% include 'sidebar-news.twig' %}
 		</div>
 
 	</div>
