--- a/templates/index.twig
+++ b/templates/index.twig
@@ -5,9 +5,19 @@
 <div class="container">
 	<div class="row">
 		<div class="col-md-7">
+			{% for post in posts %}
 			<div class="module">
-			Posts
+				<h3 class="mb-1"><a href="{{post.link}}">{{post.name}}</a></h3>
+				<p class="mb-1">{{post.preview.read_more('')}}</p>
+				<small class="text-muted">{{post.date}}</small>
 			</div>
+			{% endfor %}
+
+			{% include 'partial/pagination.twig' %}
+
+		</div>
+		<div class="col-md-4 offset-md-1">
+			{% include 'sidebar-news.twig' %}
 		</div>
 	</div>
 </div>
