--- a/templates/base.twig
+++ b/templates/base.twig
@@ -15,7 +15,7 @@
 					{% block header %}
 					<div class="row">
 						<div class="col-md-6">
-							<h1 role="banner">
+							<h1 role="banner" class="h2">
 								<a href="{{site.url}}" rel="home">{{site.name}}</a>
 							</h1>
 						</div>
