--- a/templates/module/hero.twig
+++ b/templates/module/hero.twig
@@ -1,7 +1,7 @@
 <div class="module hero">
 
     {% set image = TimberImage(module.image) %}
-    <img alt="{{image.alt}}" class="hero-image" src="{{image.src|resize(3000, 1000)}}">
+    <img alt="{{image.alt}}" class="hero-image" src="{{image.src|resize(3000, 1000, 'center')}}">
 
     <div class="container">
         <div class="row">
