--- a/templates/base.twig
+++ b/templates/base.twig
@@ -8,7 +8,15 @@
 
 	<body class="{{body_class}}" data-template="base.twig">
 
-		
+	<div id="google_translate_element"></div>
+
+	<script type="text/javascript">
+		function googleTranslateElementInit() {
+			new google.translate.TranslateElement({pageLanguage: 'en', includedLanguages: 'es', layout: google.translate.TranslateElement.FloatPosition.TOP_LEFT}, 'google_translate_element');
+		}
+	</script>
+	
+	<script type="text/javascript" src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
 
 			<div class="container">
 				<header>
