--- a/templates/footer-primary.twig
+++ b/templates/footer-primary.twig
@@ -1,14 +1,14 @@
-<div class="row">
-    <div class="col-md-3">
-        Newsletter
+<div class="row footer-primary">
+    <div class="col-md-4">
+        Address<br>
+        Email<br>
+        Phone<br>
+        Facebook<br>
     </div>
-    <div class="col-md-3 offset-md-1">
+    <div class="col-md-4">
         {% include 'menu.twig' with {'menu': footer_primary.get_items, 'ul_class': 'list-unstyled'} %}
     </div>
-    <div class="col-md-3">
+    <div class="col-md-4">
         {% include 'menu.twig' with {'menu': footer_secondary.get_items, 'ul_class': 'list-unstyled'} %}
-    </div>
-    <div class="col-md-2">
-        Logo
     </div>
 </div>
