--- a/templates/base.twig
+++ b/templates/base.twig
@@ -19,7 +19,7 @@
 	<script type="text/javascript" src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
 
 			<div class="container">
-				<header>
+				<header class="header" role="banner">
 					{% block header %}
 					<div class="row">
 						<div class="col-md-6">
@@ -41,7 +41,7 @@
 
 			
 				
-				<section role="main">
+				<main class="main" role="main">
 					{% if menu_items %}
 					<div class="menu-items">
 						<div class="container">
@@ -64,10 +64,10 @@
 					Sorry, no content
 					{% endblock %}
 					
-				</section>
+				</main>
 
 				{% block footer %}
-					<footer class="footer">
+					<footer class="footer" role="contentinfo">
 						<div class="container">
 							{% include 'footer-primary.twig' %}
 							{% include 'footer-secondary.twig' %}
