--- a/templates/module/schools.twig
+++ b/templates/module/schools.twig
@@ -17,7 +17,7 @@
             <div class="card-body">
                 <h3 class="card-title">{{school.heading}}</h3>
                 <p class="card-text">{{school.copy}}</p>
-                <a href="{{school.link.url}}" target="{{school.link.target}}" class="btn btn-secondary">{{school.link.title}}</a>
+                <a href="{{school.link.url}}" target="{{school.link.target}}">{{school.link.title}}</a>
             </div>
         </div>
         {% endfor %}
