Add newsletter to context

--- a/templates/footer-secondary.twig
+++ b/templates/footer-secondary.twig
@@ -2,7 +2,7 @@
     <div class="col-10 offset-1 col-md-5 offset-md-0 footer-newsletter">
         <h4>Sign Up for Our Newsletter</h4>
         {% filter shortcodes %}
-        [gravityform id=1 title=false description=false]
+        [gravityform id={{newsletter}} title=false description=false]
         {% endfilter %}
     </div>
     <div class="col-10 offset-1 col-md-5 offset-md-2 footer-logo">
