--- a/templates/module/hero.twig
+++ b/templates/module/hero.twig
@@ -1,20 +1,19 @@
 <div class="module hero">
 
     {% set image = TimberImage(module.image) %}
-    <img alt="{{image.alt}}" class="hero-image" src="{{image.src|resize(3000, 1000, 'center')}}">
+    <img alt="{{image.alt}}" class="hero-image" src="{{image.src|resize(772, 362, 'center')}}">
 
     <div class="container">
         <div class="row">
-            <div class="col-md-5 offset-md-1">
+            <div class="col-md-6">
                 <h1>{{module.heading}}</h1>
             </div>
-
-            <div class="col-md-5">
+            <div class="col-md-6">
                 <p>{{module.copy}}</p>
                 {% if module.buttons %}
-                <ul class="list-inline">
+                <ul>
                     {% for button in module.buttons %}
-                    <li class="list-inline-item"><a class="btn btn-primary" href="{{button.link.url}}" target="{{button.link.target}}">{{button.link.title}}</a></li>
+                    <li><a class="btn btn-primary" href="{{button.link.url}}" target="{{button.link.target}}">{{button.link.title}}</a></li>
                     {% endfor %}
                 </ul>
                 {% endif %}
