Register custom post types

--- a/style.css
+++ b/style.css
@@ -422,7 +422,7 @@ input, button, select, optgroup, textarea {
         margin-bottom: 40px;
     }
 
-    .board img, .staff img {
+    .staff img {
         margin-bottom: 0;
     }
 
