--- a/templates/custom-directory.twig
+++ b/templates/custom-directory.twig
@@ -60,7 +60,7 @@
                     </ul>
                     {% endif %}
 
-                    {% if post.biography %}
+                    {% if member.biography %}
                     <p class="bio">{{member.biography}}</p>
                     {% endif %}
                 </div>
