--- a/templates/custom-directory.twig
+++ b/templates/custom-directory.twig
@@ -33,7 +33,7 @@
             {% elseif member.post_type == 'staff' %}
             <div class="row staff">
                 {% if photo %}
-                <div class="col-md-4">
+                <div class="col-md-4 col-lg-3">
                     <div class="row">
                         <div class="col-5 col-md-12">
                             <img src="{{TimberImage(photo).src|resize(400,400)}}">
