Page title styles

--- a/templates/base.twig
+++ b/templates/base.twig
@@ -55,8 +55,12 @@
 					{% endif %}
 
 					{% if title %}
-					<div class="container">
-						<h1 class="title">{{title}}</h1>
+					<div class="title-band">
+						<div class="container">
+							<div class="col-md-6">
+								<h1 class="title">{{title}}</h1>
+							</div>
+						</div>
 					</div>
 					{% endif %}
 
