--- a/style.css
+++ b/style.css
@@ -80,10 +80,6 @@ nav + nav {
     margin-top: 10px;
 }
 
-.title {
-    margin-top: 15px;
-}
-
 .hero {
     margin-top: 15px;
 }
@@ -143,6 +139,21 @@ input, button, select, optgroup, textarea {
 * === MAIN ===
 */
 
+.title-band {
+    background-color: #BF1010;
+    clip-path: polygon(100% 0, 100% 90%, 0 100%, 0 0);
+    color: #fff;
+    margin-bottom: 20px;
+    padding-top: 30px;
+    padding-bottom: 20px;
+}
+
+.title {
+    font-size: 1.7rem;
+    font-weight: bold;
+    line-height: 1.2;
+}
+
 .main {
     font-family: 'Roboto', sans-serif;
     color: #2F2C38 !important;
@@ -150,6 +161,16 @@ input, button, select, optgroup, textarea {
 }
 
 @media (min-width: 768px) {
+    .title-band {
+        margin-bottom: 40px;
+        padding-top: 80px;
+        padding-bottom: 40px;
+    }
+    
+    .title {
+        font-size: 2.25rem;
+    }
+
     .main {
         margin-bottom: 110px;
     }
