--- a/templates/base.twig
+++ b/templates/base.twig
@@ -57,8 +57,10 @@
 					{% if title %}
 					<div class="title-band">
 						<div class="container">
-							<div class="col-md-6">
-								<h1 class="title">{{title}}</h1>
+							<div class="row">
+								<div class="col-md-6">
+									<h1 class="title">{{title}}</h1>
+								</div>
 							</div>
 						</div>
 					</div>
