--- a/templates/index.twig
+++ b/templates/index.twig
@@ -4,22 +4,30 @@
 
 <div class="container">
 	<div class="row">
-		<div class="col-md-7">
+		
 			{% for post in posts %}
-			<div class="module">
-				<h3 class="mb-1"><a href="{{post.link}}">{{post.name}}</a></h3>
-				<p class="mb-1">{{post.preview.read_more('')}}</p>
-				<small class="text-muted">{{post.date}}</small>
+			<div class="col-md-6 post">
+					<img class="post-thumbnail" src="{{post.thumbnail.src|resize(800, 500, 'center')}}">
+					{% if post.categories %}
+					<ul class="post-categories">
+						{% for category in post.categories %}
+						<li><a href="{{category.link}}">{{category.name}}</a></li>
+						{% endfor %}
+					</ul>
+					{% endif %}
+					<h3 class="post-title"><a href="{{post.link}}">{{post.name}}</a></h3>
+					<p class="post-preview">{{post.preview.length(20).read_more('')}}</p>
+					<a class="special special-right" href="{{post.link}}">Read More</a>
+				
 			</div>
 			{% endfor %}
 
-			{% include 'partial/pagination.twig' %}
-
-		</div>
-		<div class="col-md-4 offset-md-1">
-			{% include 'sidebar-news.twig' %}
-		</div>
+	
 	</div>
+
+	{% if posts.pagination.prev or posts.pagination.next %}
+	{% include 'partial/pagination.twig' %}
+	{% endif %}
 </div>
 
 {% endblock %}
